# blickfang

./: .gitignore  ANNOTIEREN.bat  AUFNEHMEN.bat  INSTALL.bat  KALIBRIEREN.bat  KOMMUNIZIEREN.bat  LASTENHEFT.md  LIES_MICH.txt  README.md  SELFTEST.bat  START.bat  TODO.md  UPDATE.bat  VALIDIEREN.bat  pyproject.toml
config/: settings.example.yaml
config/layouts/: deutsch_frequenz.yaml  phrasen.yaml
frontend/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: CalibrationView.tsx  CaregiverDashboard.tsx  CountdownBar.tsx  DictionaryView.tsx  ErrorOverlay.tsx  ModeBar.tsx  ScanGrid.tsx  SentenceBuilderView.tsx  SettingsPanel.tsx  StartScreen.tsx  StatusFooter.tsx  TextDisplay.tsx
frontend/src/hooks/: useAudioFeedback.ts  useWebSocket.ts
frontend/src/types/: protocol.ts
src/blickfang/app/: annotate.py  calibrate.py  communicate.py  record.py  run_yesno.py  selftest.py  server.py  validate.py
src/blickfang/calibration/: profile.py  selector.py  session.py
src/blickfang/capture/: camera.py
src/blickfang/core/: config.py  events.py  model_manager.py
src/blickfang/detection/: baseline.py  detector.py  quality.py
src/blickfang/features/: channels.py  face_mesh.py
src/blickfang/io/: replay.py
src/blickfang/output/: scanning.py  tts.py
src/blickfang/scanning/: alarm.py  controller.py  dictionary.py  engine.py  fatigue.py  layouts.py  predictor.py  sentence_builder.py  text_buffer.py
tests/: conftest.py  test_calibration.py  test_detector.py  test_m2_scanning.py  test_m3.py  test_scanning.py  test_tools.py
(+12 files in other folders)
