[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blickfang"
version = "0.1.0"
description = "Signaloffene Webcam-Kommunikation für Menschen mit schwerer motorischer Einschränkung"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "blickfang contributors" },
]

dependencies = [
    "opencv-python>=4.8",
    "mediapipe>=0.10.9",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pyttsx3>=2.90",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
piper = [
    "piper-tts>=1.2",
]

[project.scripts]
blickfang-calibrate = "blickfang.app.calibrate:main"
blickfang-run = "blickfang.app.run_yesno:main"

[tool.hatch.build.targets.wheel]
packages = ["src/blickfang"]

[tool.pytest.ini_options]
testpaths = ["tests"]
